# meta-forest

./: .gitignore  LICENSE  README.md  create_bd.tcl  forest.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: Makefile  conf.py  examples.rst  getting_started.rst  index.rst  introduction.rst  meta_forest.rst  requirements.txt
docs/source/: meta_forest.cli.rst  meta_forest.helpers.rst  meta_forest.logging_utils.rst  meta_forest.ros_packages.rst  meta_forest.rst  meta_forest.version.rst  meta_forest.vivado_block_design.rst  modules.rst
examples/FFT/: README.md  preparation.tcl
examples/FFT/hls/: hls_fft.cpp  hls_fft.h  hls_fft_tb.cpp
examples/multiple_types/: README.md
examples/simple-add/: README.md  preparation.tcl
examples/simple-add/hls/: add.c
examples/vector-add/: README.md  preparation.tcl
examples/vector-add-lite/: preparation.tcl
examples/vector-add-lite/hls/: vector-add-lite.c
examples/vector-add/hls/: vadd.c
meta_forest/: _version.py  cli.py  config.py  create_bd.tcl  forest.py  helper.py  helpers.py  logging_utils.py  meta_forest.py  package_rtl.tcl  project.py  ros_package.py  ros_packages.py  vivado_block_design.py  vivado_block_design.tcl
meta_forest/templates/: CMakeLists-int.txt.jinja2  config.forest.jinja2  config.toml.jinja2  fpga_node.py.jinja2  fpga_node_launch.py.jinja2  io_maps.py  listener.py.jinja2  listener_launch.py.jinja2  package-int.xml.jinja2  package-node.xml.jinja2  pynq_driver.py  ros_fpga_lib.py.jinja2  setup.py.jinja2  talker.py.jinja2  talker_launch.py.jinja2
templates/: CMakeLists-int.txt.jinja2  config.forest.jinja2  fpga_node.py.jinja2  fpga_node_launch.py.jinja2  listener.py.jinja2  listener_launch.py.jinja2  ros_fpga_lib.py.jinja2  talker.py.jinja2  talker_launch.py.jinja2
tests/: test_vivado_block_design.py
tests/data/: config_empty.toml
