[tool.poetry]
name = "meta-forest"
version = "0.1.0"
description = ""
authors = ["Eisuke Okazaki"]
include = ["meta_forest/*"]

[tool.poetry.scripts]
meta-forest = "meta_forest.forest:main"

[tool.flake8]
ignore = "E203,W503"

[tool.black]
target-version = ["py36", "py37", "py38"]
line-length = 79

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.6"
Jinja2 = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

