[metadata]
name = meta-forest
version = 0.2.0
author = Eisuke Okazaki

[options]
packages = find:
install_requires = 
    Jinja2

[options.entry_points]
console_scripts = meta-forest=meta_forest.cli:main

[options.extras_require]
lint = 
    black
    flake8
    isort
    pytest

[options.package_data]
meta_forest = 
    templates/*
    *.tcl

[flake8]
ignore = "E203,W503"
