[metadata]
name = meta-forest
version = 0.3.2
author = Eisuke Okazaki

[options]
packages = find:
install_requires = 
    Jinja2

[options.entry_points]
console_scripts = meta-forest=meta_forest.cli:main

[options.extras_require]
lint = 
    black
    flake8
    isort
    pytest

[options.package_data]
meta_forest = 
    templates/*
    *.tcl

[flake8]
ignore = E203,W503,Q000,D100,D101,D102,D103,D104,D107,I101
max-line-length = 88
